Fixed wrapping issues

--- a/constellations/gemini-admin/src/session/sessionAdd.sass
+++ b/constellations/gemini-admin/src/session/sessionAdd.sass
@@ -18,8 +18,7 @@
         justify-content: space-between
 
     .item
-        // Text wraps if smaller
-        width: $spacing24x + $spacing1x
+        width: $spacing24x + $spacing3x
         margin-right: $spacing6x
         margin-bottom: $spacing2x
 
@@ -43,6 +42,7 @@
 
     #btn-add-sessions
         margin: $spacing2x
+        margin-right: 0
         padding: 12px $spacing2x
         color: $colorWhite
         background-color: $colorTurquoise
