--- a/constellations/gemini-admin/src/session/sessionEdit.sass
+++ b/constellations/gemini-admin/src/session/sessionEdit.sass
@@ -1,7 +1,7 @@
 @import "../_.constants.sass"
 
 #view-session-edit
-    width: $spacing96x
+    max-width: $spacing96x
     padding: $spacing1x $spacing8x $spacing4x
     box-sizing: border-box
 
@@ -24,7 +24,7 @@
         flex-flow: row wrap
 
     .time_picker_container
-        width: $spacing24x + $spacing1x
+        width: $spacing30x
 
     #cancel-toggle
         display: flex
